# hh_vacancy

./: .env (copy)  .gitignore  README.md  compose.yml  mongod.conf  pyproject.toml
app/: Dockerfile  database.py  main.py
app/core/: config.py  consts.py  log_config.yml
app/routers/: __init__.py  gsheets.py  lookups.py  vacancies.py
app/templates/: index.html
app/templates/static/: areas.json  professional_roles.json
app/templates/static/css/: style.css
app/templates/static/js/: filters.js  script.js  search.js
app/utils/: functions.py
mongo/: Dockerfile  mongod.conf
